[tool.poetry]
name = "tensorboard_test"
version = "0.1.0"
description = ""
authors = ["TomohiroAzuma"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
numpy = "^1.21.1"
torch = "^1.9.0"
matplotlib = "^3.4.2"
moviepy = "^1.0.3"
tensorboard = "^2.6.0"
stable-baselines3 = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
